--- a/esphome/temp-ext.yaml
+++ b/esphome/temp-ext.yaml
@@ -1,5 +1,8 @@
+substitutions:
+  device: iron
+
 esphome:
-  name: iron
+  name: ${device}
   platform: ESP8266
   board: d1_mini
 
@@ -8,7 +11,7 @@ esphome:
 binary_sensor:
   - platform: gpio
     pin: D3
-    name: "Button"
+    name: "${device}.button"
 
 i2c:
   sda: D2
@@ -19,11 +22,11 @@ i2c:
 sensor:
   - platform: bmp280
     temperature:
-      name: "Temperature"
+      name: "${device}.temperature"
       oversampling: 8x
       accuracy_decimals: 2
     pressure:
-      name: "Pressure"
+      name: "${device}.pressure"
       oversampling: 8x
     address: 0x76
     update_interval: 15s
