--- a/esphome/temp-ext.yaml
+++ b/esphome/temp-ext.yaml
@@ -12,6 +12,8 @@ binary_sensor:
   - platform: gpio
     pin: D3
     name: "${device}.button"
+    filters:
+      - invert:
 
 i2c:
   sda: D2
@@ -23,10 +25,18 @@ sensor:
   - platform: bmp280
     temperature:
       name: "${device}.temperature"
+      device_class: "temperature"
       oversampling: 8x
       accuracy_decimals: 2
+# senzor se hrozne zahriva sam od sebe
+      filters:
+        - offset: -4.8
+        - sliding_window_moving_average:
+            window_size: 4
+            send_every: 1
     pressure:
       name: "${device}.pressure"
+      device_class: "pressure"
       oversampling: 8x
     address: 0x76
     update_interval: 15s
